Sat Apr 16 22:23:52 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strftime.c (date_strftime_wo_timespec): changed
	  the way of validation of locale modifiers.

Sat Apr 16 21:55:12 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: replacement of implementation of
	  _strptime.  [experimental]
	* ext/date/date_strptime.c: new.
	* ext/date/lib/date/format.rb: removed ruby version of _strptime.

Sat Apr 16 10:18:30 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* vm.c (Init_VM): suppress warning: "OPT_BASIC_OPERATIONS" is not
	  defined.

Fri Apr 15 23:41:18 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ruby.c (proc_options): suppress warning:
	  "ALLOW_DEFAULT_SOURCE_ENCODING" is not defined.

Fri Apr 15 15:10:29 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/generic.rb (#route_from_path): Fix a bug where
	  URI('http://h/b/').route_to('http://h/b') wrongly returned './'
	  (should be '../b'). [Bug #4476]

Fri Apr 15 14:58:06 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#touch): Fix corrupted output when
	  mtime is specified in addition to nocreate (and verbose).
	  ref [ruby-dev:43401]

Thu Apr 14 23:43:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (ruby_float_step): wrong loop condition.
	  fixes [ruby-core:35753], reported by Joey Zhou.

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  test above change.

Thu Apr 14 22:48:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::Options#setup_options): set possible
	  values for completion. no conversion is needed.

	* lib/test/unit.rb (Test::Unit::Runner::Worker#initialize): use
	  positional arguments instead of keyword arguments.

	* lib/test/unit.rb (Test::Unit::Runner#jobs_status): io/console may
	  not be available. use 80 as the last resort if IO#winsize and
	  COLUMNS are unavailable.

	* lib/test/unit.rb (Test::Unit::Runner::Worker#died): rename using a
	  verb.
