@@ -1,3 +1,2 @@
 require 'mkmf'
-$INCFLAGS << " -I$(top_srcdir)"
 create_makefile('date_core')
